--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
-/* -------- Default Style --------- */
+/* -------- Default & Common Shared Style --------- */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Noto Sans", sans-serif;
 }
+
 .btn {
     background-color: #ff4f00;
     color: #fff;
@@ -16,6 +17,7 @@
     letter-spacing: 0.8px;
     cursor: pointer;
 }
+
 .outline-btn {
     background: transparent;
     border: 2px solid #ff4f00;
@@ -27,24 +29,32 @@
     letter-spacing: 0.8px;
     cursor: pointer;
 }
+
 .btn-cart {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
+
 .btn img {
     width: 1.3rem;
 }
+
+/* -------- Header Section Style --------- */
 header {
     background: #e5e4e2;
 }
+
+/* -------- Navigation Bar & Banner Section Style --------- */
+
 .nav-container {
     position: relative;
     background: url(/images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
 }
+
 .nav-container::before {
     content: "";
     position: absolute;
@@ -61,6 +71,7 @@ header {
     position: relative;
     z-index: 2;
 }
+
 nav {
     max-width: 80vw;
     margin: 0 auto;
@@ -71,41 +82,51 @@ nav {
     position: relative;
     z-index: 3;
 }
+
 .logo,
 .menu,
 .menu-icon {
     width: 100%;
 }
+
 .logo img {
     width: 10rem;
 }
+
 .menu ul {
     display: flex;
     gap: 1.5rem;
 }
+
 .menu ul li {
     list-style: none;
 }
+
 .menu a {
     text-decoration: none;
     font-weight: 700;
     color: #fff;
 }
+
 .menu a:hover {
     color: #ff4f00;
 }
+
 .menu-icon {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 2rem;
 }
+
 .menu-icon img {
     width: 1.5rem;
 }
+
 .banner {
     padding: 9rem;
 }
+
 .banner-sub-title {
     font-size: 1.1rem;
     font-weight: 800;
@@ -114,6 +135,7 @@ nav {
     text-transform: uppercase;
     text-align: center;
 }
+
 .banner-title {
     font-size: 4rem;
     font-weight: 800;
@@ -121,12 +143,14 @@ nav {
     text-align: center;
     margin: 2rem 0;
 }
+
 .banner-btn {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2rem;
 }
+
 .banner-extra-container {
     max-width: 80vw;
     margin: 0 auto;
@@ -134,21 +158,25 @@ nav {
     justify-content: space-between;
     padding: 3rem 0;
 }
+
 .ssr-container {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
+
 .ssr-container img {
     width: 5rem;
     border: 3px dotted #f28123;
     border-radius: 50%;
     padding: 1rem;
 }
+
 .ssr-content h4 {
     font-size: 1.3rem;
     margin-bottom: 8px;
 }
+
 .ssr-content p {
     color: #696969;
 }
@@ -158,20 +186,24 @@ nav {
     max-width: 80vw;
     margin: 5rem auto;
 }
+
 .products-details {
     padding: 3rem auto;
     text-align: center;
     margin: 3rem 0;
 }
+
 .products-title {
     font-size: 2.3rem;
     font-weight: 900;
     color: rgb(26, 26, 26);
     padding-bottom: 10px;
 }
+
 .products-title span {
     color: #ff4f00;
 }
+
 .products-brief {
     color: #191919;
 }
@@ -181,40 +213,93 @@ nav {
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     align-items: center;
-    /* box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5),
-        -5px -5px -5px -5px rgba(0, 0, 0, 0.5); */
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .product-card {
     border-radius: 5px;
     padding: 1.5rem;
     text-align: center;
     box-shadow: 3px 3px 10px 5px rgba(75, 75, 75, 0.1);
-    /* -1px -1px 10px 4px rgba(255, 255, 255, 0.1); */
 }
+
 .product-img {
     width: 15rem;
 }
+
 .product-name {
     font-size: 1.2rem;
     font-weight: 800;
     color: #191919;
     margin-bottom: 0.8rem;
 }
+
 .product-card p {
     color: #313131;
     font-weight: 500;
 }
+
 .product-price {
     font-size: 2rem;
     font-weight: 800;
     color: #191919;
     margin: 0.8rem;
 }
+
 .product-card button {
     max-width: 100vw;
     margin: 0 auto;
 }
+
 .product-card a {
     text-decoration: none;
+}
+
+/* -------- Deal Of The Month Section Style --------- */
+.deal-container {
+    background-color: #f6f6f6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+    padding: 3rem;
+    margin: 5rem 0;
+}
+.deal-img {
+    width: 50%;
+    padding: 3rem;
+}
+.deal-content {
+    width: 50%;
+}
+.sub-title {
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #313131;
+}
+.deal-brief {
+    color: #696969;
+    margin: 1rem 0;
+    line-height: 1.5rem;
+}
+
+.deal-counter {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+.deal-time {
+    border: 2px solid #ff4f00;
+    text-align: center;
+    width: 80px;
+    height: 80px;
+}
+.deal-time h4 {
+    font-size: 1.8rem;
+    font-weight: 800;
+    color: #ff4f00;
+    padding-top: 7px;
+}
+.deal-time p {
+    color: #313131;
+    font-size: 0.9rem;
 }
