--- a/styles/style.css
+++ b/styles/style.css
@@ -365,3 +365,36 @@ nav {
 .origin-content button {
     margin: 1.5rem 0;
 }
+
+/*---------- Sale Discount Section Style ----------*/
+.discount-container {
+    background-image: url(../images/discount.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 5rem 0;
+}
+.discount-content {
+    padding: 6rem 8rem;
+    max-width: 50%;
+}
+.discount-precent {
+    display: flex;
+    align-items: end;
+    gap: 8px;
+    margin: 1rem 0;
+}
+.discount-precent p {
+    width: 50px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #191919;
+    padding-bottom: 8px;
+}
+.discount-precent h3 {
+    font-size: 3.2rem;
+    font-weight: 800;
+    color: #ff4f00;
+}
+
+/*----------- Our News Section Style ------------*/
