full website layout complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -501,3 +501,108 @@ nav {
     align-items: center;
     justify-content: space-between;
 }
+
+/*--------- Footer Section Style ----------*/
+footer {
+    background-color: #001d3d;
+}
+.footer-info-container {
+    max-width: 80vw;
+    margin: 0 auto;
+    padding: 5rem 0;
+    color: white;
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+}
+.footer-info-container h3 {
+    padding-bottom: 2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.footer-info-container p {
+    color: #b8b8b8;
+    line-height: 1.5rem;
+    font-weight: 300;
+}
+
+.about-content {
+    width: 25%;
+}
+.get-touch-content p {
+    padding-bottom: 8px;
+}
+.pages-content li {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    list-style: none;
+    padding-bottom: 8px;
+}
+.pages-content img {
+    width: 1rem;
+}
+.pages-content a {
+    text-decoration: none;
+    color: #b8b8b8;
+}
+.pages-content a:hover {
+    color: #ff4f00;
+}
+
+.subscribe-content {
+    max-width: 40%;
+    padding-left: 8rem;
+}
+.subscribe-input-content {
+    display: flex;
+    gap: 5px;
+    margin: 1rem 0;
+}
+.subscribe-input-content input {
+    width: 85%;
+    padding: 15px 15px;
+    font-size: 1rem;
+    background-color: #022d5ac2;
+    border: none;
+    border-radius: 3px;
+}
+.input-button {
+    width: 15%;
+    background-color: #022d5ac2;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.input-button img {
+    width: 40px;
+    padding: 10px;
+}
+.horizontal-border {
+    display: block;
+    border-top: 1px solid rgba(210, 236, 160, 0.1);
+}
+.footer-link-container {
+    max-width: 80vw;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 0;
+}
+.footer-copyright p {
+    color: #b8b8b8;
+    font-weight: 300;
+}
+.footer-copyright span {
+    font-weight: 700;
+    color: #f28123;
+}
+.social-link {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.social-link img {
+    width: 1.1rem;
+}
