--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,9 @@
     letter-spacing: 0.8px;
     cursor: pointer;
 }
+.btn:hover {
+    filter: hue-rotate(180deg);
+}
 
 .outline-btn {
     background: transparent;
@@ -29,6 +32,12 @@
     letter-spacing: 0.8px;
     cursor: pointer;
 }
+.outline-btn:hover {
+    padding: 0.8rem 1.2rem;
+    border: none;
+    background-color: #ff4f00;
+    color: #fff;
+}
 
 .btn-cart {
     display: flex;
@@ -36,7 +45,9 @@
     justify-content: center;
     gap: 10px;
 }
-
+.btn-cart:hover {
+    filter: hue-rotate(145deg);
+}
 .btn img {
     width: 1.3rem;
 }
@@ -110,6 +121,7 @@ nav {
 
 .menu a:hover {
     color: #ff4f00;
+    border-bottom: 2px solid #fff;
 }
 
 .menu-icon {
@@ -121,6 +133,7 @@ nav {
 
 .menu-icon img {
     width: 1.5rem;
+    cursor: pointer;
 }
 
 .banner {
@@ -188,9 +201,10 @@ nav {
 }
 
 .products-details {
+    max-width: 60%;
     padding: 3rem auto;
     text-align: center;
-    margin: 3rem 0;
+    margin: 3rem auto;
 }
 
 .products-title {
@@ -205,7 +219,8 @@ nav {
 }
 
 .products-brief {
-    color: #191919;
+    color: #313131;
+    line-height: 2rem;
 }
 
 .products-card-container {
@@ -271,6 +286,19 @@ nav {
     width: 50%;
     padding: 3rem;
 }
+
+.deal-img:hover {
+    animation: rotate 3s ease-in-out;
+}
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .deal-content {
     width: 50%;
 }
