--- a/styles/style.css
+++ b/styles/style.css
@@ -806,10 +806,29 @@ footer {
     .deal-time p {
         font-size: 0.7rem;
     }
+
+    /*---- Feedback Section -----*/
+    .feedback-container img {
+        width: 70px;
+    }
+    .feedback-container h4 {
+        font-size: 1rem;
+        font-weight: 700;
+    }
+    .feedback-container h6 {
+        font-size: 0.8rem;
+        font-weight: 700;
+    }
+    .feedback-container p {
+        font-size: 0.8rem;
+        margin: 1rem 0;
+        line-height: 1.2rem;
+    }
+    .quote {
+        font-size: 2.5rem;
+    }
 }
 
 /*
-
-
 
     */
