responsive for max 576px  mobile device

--- a/styles/style.css
+++ b/styles/style.css
@@ -288,6 +288,7 @@ nav {
     padding: 3rem;
     margin: 5rem 0;
 }
+
 .deal-img {
     width: 50%;
     padding: 3rem;
@@ -296,6 +297,7 @@ nav {
 .deal-img:hover {
     animation: rotate 3s ease-in-out;
 }
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
@@ -315,6 +317,7 @@ nav {
     text-transform: uppercase;
     color: #313131;
 }
+
 .deal-brief {
     color: #696969;
     margin: 1rem 0;
@@ -327,18 +330,21 @@ nav {
     gap: 6px;
     margin: 1rem 0 2rem;
 }
+
 .deal-time {
     border: 2px solid #ff4f00;
     text-align: center;
     width: 80px;
     height: 80px;
 }
+
 .deal-time h4 {
     font-size: 1.8rem;
     font-weight: 800;
     color: #ff4f00;
     padding-top: 7px;
 }
+
 .deal-time p {
     color: #313131;
     font-size: 0.9rem;
@@ -358,16 +364,19 @@ nav {
     width: 100px;
     border-radius: 50%;
 }
+
 .feedback-container h4 {
     font-size: 1.2rem;
     font-weight: 800;
     margin: 1rem 0;
 }
+
 .feedback-container h6 {
     font-size: 0.9rem;
     font-weight: 800;
     color: #313131;
 }
+
 .feedback-container p {
     color: #696969;
     font-style: italic;
@@ -375,6 +384,7 @@ nav {
     letter-spacing: 0.3px;
     line-height: 1.5rem;
 }
+
 .quote {
     font-size: 4rem;
     color: #696969;
@@ -389,19 +399,24 @@ nav {
     justify-content: center;
     gap: 4rem;
 }
+
 .origin-video iframe {
     border-radius: 10px;
     height: 425px;
 }
+
 .origin-video {
     flex: 1;
 }
+
 .origin-content {
     flex: 1;
 }
+
 .origin-content p {
     color: #696969;
 }
+
 .origin-content button {
     margin: 1.5rem 0;
 }
@@ -413,19 +428,23 @@ nav {
     background-size: cover;
     margin: 8rem 0;
 }
+
 .discount-content {
     padding: 6rem;
     max-width: 60%;
 }
+
 .sale-discount {
     font-size: 3rem;
 }
+
 .discount-precent {
     display: flex;
     align-items: end;
     gap: 8px;
     margin: 1rem 0;
 }
+
 .discount-precent p {
     width: 50px;
     font-size: 1.2rem;
@@ -433,6 +452,7 @@ nav {
     color: #191919;
     padding-bottom: 8px;
 }
+
 .discount-precent h3 {
     font-size: 3.2rem;
     font-weight: 800;
@@ -444,6 +464,7 @@ nav {
     max-width: 80vw;
     margin: 5rem auto;
 }
+
 .news-card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -454,6 +475,7 @@ nav {
     border-radius: 20px 20px 5px 5px;
     box-shadow: 3px 3px 10px 5px rgba(75, 75, 75, 0.1);
 }
+
 .news-card:hover {
     box-shadow: 3px 3px 10px 6px rgba(47, 0, 255, 0.15);
 }
@@ -543,10 +565,12 @@ nav {
     background-color: #e5e4e2;
     padding: 3rem 0;
 }
+
 .company-content {
     max-width: 80vw;
     margin: 0 auto;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     align-items: center;
     justify-content: space-between;
 }
@@ -555,6 +579,7 @@ nav {
 footer {
     background-color: #001d3d;
 }
+
 .footer-info-container {
     max-width: 80vw;
     margin: 0 auto;
@@ -564,11 +589,19 @@ footer {
     gap: 2rem;
     justify-content: space-between;
 }
+
+.info-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer-info-container h3 {
     padding-bottom: 2rem;
     font-size: 1.5rem;
     font-weight: 500;
 }
+
 .footer-info-container p {
     color: #b8b8b8;
     line-height: 1.5rem;
@@ -578,9 +611,11 @@ footer {
 .about-content {
     width: 25%;
 }
+
 .get-touch-content p {
     padding-bottom: 8px;
 }
+
 .pages-content li {
     display: flex;
     align-items: center;
@@ -588,26 +623,30 @@ footer {
     list-style: none;
     padding-bottom: 8px;
 }
+
 .pages-content img {
     width: 1rem;
 }
+
 .pages-content a {
     text-decoration: none;
     color: #b8b8b8;
 }
+
 .pages-content a:hover {
     color: #ff4f00;
 }
 
 .subscribe-content {
-    max-width: 40%;
-    padding-left: 8rem;
+    padding-left: 5rem;
 }
+
 .subscribe-input-content {
     display: flex;
     gap: 5px;
     margin: 1rem 0;
 }
+
 .subscribe-input-content input {
     width: 85%;
     padding: 15px 15px;
@@ -625,20 +664,24 @@ footer {
 }
 
 .input-button {
-    width: 15%;
+    width: 20%;
     background-color: #022d5ac2;
     border: none;
     border-radius: 3px;
     cursor: pointer;
 }
+
 .input-button img {
     width: 40px;
+    height: 40px;
     padding: 10px;
 }
+
 .horizontal-border {
     display: block;
     border-top: 1px solid rgba(210, 236, 160, 0.1);
 }
+
 .footer-link-container {
     max-width: 80vw;
     margin: 0 auto;
@@ -647,24 +690,30 @@ footer {
     justify-content: space-between;
     padding: 1.5rem 0;
 }
+
 .footer-copyright p {
     color: #b8b8b8;
     font-weight: 300;
 }
+
 .footer-copyright span {
     font-weight: 700;
     color: #f28123;
 }
+
 .social-link {
     display: flex;
     align-items: center;
     gap: 2rem;
 }
+
 .social-link img {
     width: 1.1rem;
 }
 
-/*-------- Responsive For Small Mobile (max-576px) Device ---------*/
+/*---------------------------------------------------------------
+-------- Responsive For Small Mobile (max-576px) Device ---------
+---------------------------------------------------------------*/
 
 @media screen and (max-width: 576px) {
     /*----- Button Style -----*/
@@ -673,12 +722,14 @@ footer {
         font-size: 0.8rem;
         font-weight: 400;
     }
+
     .outline-btn,
     .outline-btn:hover {
         padding: 0.4rem 1rem;
         font-size: 0.8rem;
         font-weight: 400;
     }
+
     .btn img {
         width: 1rem;
     }
@@ -689,21 +740,25 @@ footer {
         background: url(../images/hero-bg-3.jpg);
         background-size: cover;
     }
+
     nav {
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
+
     .menu ul {
         flex-direction: column;
         gap: 0.8rem;
         margin: 2rem 0 1rem;
     }
+
     .menu-icon {
         align-items: center;
         justify-content: center;
         gap: 4rem;
     }
+
     .logo,
     .menu,
     .menu-icon {
@@ -714,6 +769,7 @@ footer {
     .banner {
         padding: 1rem 1rem 2rem;
     }
+
     .banner-sub-title {
         font-size: 15px;
         font-weight: 700;
@@ -733,16 +789,19 @@ footer {
     .ssr-container {
         gap: 0.5rem;
     }
+
     .ssr-container img {
         width: 3rem;
         border: 2px dotted #f28123;
         border-radius: 50%;
         padding: 0.5rem;
     }
+
     .ssr-content h4 {
         font-size: 0.8rem;
         margin-bottom: 5px;
     }
+
     .ssr-content p {
         font-size: 0.7rem;
     }
@@ -752,33 +811,41 @@ footer {
         max-width: 90vw;
         margin: 3rem auto;
     }
+
     .products-details {
         max-width: 100%;
         padding: 1rem;
     }
+
     .products-title {
         font-size: 1.5rem;
         font-weight: 800;
     }
+
     .products-brief {
         line-height: 1.3rem;
         font-size: 0.8rem;
     }
+
     .products-card-container {
         grid-template-columns: 1fr;
         gap: 3rem;
     }
+
     .product-card {
         margin: 0 3rem;
     }
+
     .product-name {
         font-size: 1rem;
         font-weight: 700;
     }
+
     .product-card p {
         font-size: 0.8rem;
         font-weight: 400;
     }
+
     .product-price {
         font-size: 1.3rem;
     }
@@ -789,33 +856,41 @@ footer {
         padding: 2rem 1rem;
         margin: 3rem 0;
     }
+
     .deal-content {
         padding: 0 10px;
     }
+
     .deal-img {
         padding: 1rem;
     }
+
     .sub-title {
         font-size: 0.9rem;
     }
+
     .deal-brief {
         font-size: 0.8rem;
         line-height: 1.2rem;
     }
+
     .deal-counter {
         gap: 4px;
         margin: 0.6rem 0 1.2rem;
     }
+
     .deal-time {
         border: 1px solid #ff4f00;
         width: 50px;
         height: 50px;
     }
+
     .deal-time h4 {
         font-size: 1.2rem;
         font-weight: 700;
         padding-top: 2px;
     }
+
     .deal-time p {
         font-size: 0.7rem;
     }
@@ -824,19 +899,23 @@ footer {
     .feedback-container img {
         width: 70px;
     }
+
     .feedback-container h4 {
         font-size: 1rem;
         font-weight: 700;
     }
+
     .feedback-container h6 {
         font-size: 0.8rem;
         font-weight: 700;
     }
+
     .feedback-container p {
         font-size: 0.8rem;
         margin: 1rem 0;
         line-height: 1.2rem;
     }
+
     .quote {
         font-size: 2.5rem;
     }
@@ -849,11 +928,13 @@ footer {
         margin: 3rem auto;
         gap: 2rem;
     }
+
     .origin-video iframe {
         width: 100%;
         height: 300px;
         margin-bottom: 2rem;
     }
+
     .origin-details {
         font-size: 0.8rem;
         line-height: 1.2rem;
@@ -863,12 +944,14 @@ footer {
     .discount-container {
         margin: 5rem 0;
     }
+
     .discount-content {
         max-width: 60%;
         margin: 0 auto;
         padding: 2rem;
         text-align: center;
     }
+
     .discount-precent {
         align-items: end;
         justify-content: center;
@@ -881,33 +964,71 @@ footer {
         max-width: 90vw;
         margin: 3rem auto 2rem;
     }
+
     .news-card-container {
         grid-template-columns: 1fr;
         row-gap: 3rem;
     }
+
     .news-card-header {
         margin: 4rem 0 2rem;
         padding: 0;
     }
+
     .news-card-content h3 {
         font-size: 1rem;
     }
+
     .news-card-content img {
         width: 0.7rem;
     }
+
     .news-card-details {
         font-size: 0.8rem;
     }
+
     .news-link a {
         font-weight: 400;
         font-size: 0.8rem;
     }
+
     .news-container button {
         margin: 3rem auto;
     }
+
+    /*----- Company Logo Section Style ------*/
+    .company-content {
+        max-width: 90vw;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    /*----- Footer Section -----*/
+    footer p {
+        font-size: 0.8rem;
+    }
+
+    .footer-info-container {
+        max-width: 90vw;
+        padding: 3rem 0 1rem;
+        gap: 1rem;
+        flex-direction: column;
+    }
+
+    .subscribe-content {
+        text-align: center;
+        padding: 0;
+    }
+
+    .footer-link-container {
+        max-width: 90vw;
+        padding: 1rem 0;
+    }
+
+    .social-link {
+        gap: 1rem;
+    }
+
+    .social-link img {
+        width: 1rem;
+    }
 }
-
-/*
-
-
-    */
