--- a/styles/style.css
+++ b/styles/style.css
@@ -835,7 +835,10 @@ footer {
     .product-card {
         margin: 0 3rem;
     }
-
+    
+.product-img {
+    width: 10rem;
+}
     .product-name {
         font-size: 1rem;
         font-weight: 700;
